--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="shortcut icon" type="image/x-icon" href="mfav.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="medienzeit.png">
 	<meta charset="utf-8" />
 	<title>Medienzeit</title>
 
