--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="mfav.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="medienzeit.png">
 	<meta charset="utf-8" />
-	<title>Medienzeit</title>
+	<title id="title">Medienzeit</title>
 
 </head>
 
